<resources>
    <string name="app_name">Coinsoto</string>
    <string name="s_fragment">fragment</string>
    <string name="s_refresh">refresh</string>
    <string name="s_fast_open">fast open</string>
    <string name="s_kline">KLine</string>
    <string name="s_float_view">Float window</string>
    <string name="s_more_time">More</string>
    <string name="s_24h_max_price">24h High</string>
    <string name="s_24h_min_price">24h Low</string>
    <string name="s_24h_vol">24h Vol</string>
    <string name="s_minute_time">Time</string>
    <string name="s_kline_indicator">Indic..</string>
    <string name="s_setting">Setting</string>
    <string name="s_loading">Loading...</string>
    <string name="s_auth_failure">auth failure</string>
    <string name="s_auth_success">auth success</string>
    <string name="s_auth_none">auth please</string>
    <string name="s_setting_theme">Setting theme</string>
    <string name="s_home">Home</string>
    <string name="s_chart">Chart</string>
    <string name="s_oi">OI</string>
    <string name="s_floatviewsetting">Floating Window</string>
    <string name="s_themesetting">Appearance</string>
    <string name="s_klinecolor">Color Preference</string>
    <string name="s_language">Language</string>
    <string name="s_default_home">Launch Screen</string>
    <string name="s_conditions_of_privacy">Privacy Policy</string>
    <string name="s_about_us">About US</string>
    <string name="s_check_update">Check for update</string>
    <string name="s_theme_light">Light</string>
    <string name="s_theme_night">Night</string>
    <string name="s_red_up">Red+ Green-</string>
    <string name="s_green_up">Green+ Red-</string>
    <string name="s_add_market">Add Market</string>
    <string name="s_floatview_display">Floating Display</string>
    <string name="s_floatview_lock">Floating Locking</string>
    <string name="s_add_up_6">Add up to 6</string>
    <string name="s_swap">perpetual</string>
    <string name="s_thisweek">week</string>
    <string name="s_nextweek">Bi-week</string>
    <string name="s_quarter">quarter</string>
    <string name="s_nextquarter">Bi-quarter</string>
    <string name="s_futures">future</string>
    <string name="s_all">All</string>
    <string name="s_search">search</string>
    <string name="s_load_failure">Load error, Please retry</string>
    <string name="s_main_chart">Main</string>
    <string name="s_sub_chart">Sub</string>
    <string name="s_indic_setting">Index Setting</string>
    <string name="s_doubleclick_exit">Press again to exit Coinsoto</string>
    <string name="s_input_error">"Please input "</string>
    <string name="s_reset">Reset</string>
    <string name="s_confirm">Confirm</string>
    <string name="s_calc_period">Calculating Period</string>
    <string name="s_short_period">Short Period</string>
    <string name="s_long_period">Long Period</string>
    <string name="s_ma_period">MA Period</string>
    <string name="s_bandwidth">Bandwidth</string>
    <string name="s_floating_notify">Floating window is running</string>
    <string name="s_test">#123456</string>
    <string name="s_open">Open:</string>
    <string name="s_high">High:</string>
    <string name="s_low">Low:</string>
    <string name="s_close">Close:</string>
    <string name="s_chg">Chg:</string>
    <string name="s_ampl">Ampl:</string>
    <string name="s_vol">Vol:</string>
    <string name="s_txn">Txn:</string>
    <string name="s_register">Register</string>
    <string name="s_login">Sign In</string>
    <string name="s_enter_account">Input email address</string>
    <string name="s_verify_code">Email verification code</string>
    <string name="s_enter_password">Enter password</string>
    <string name="s_send_verify_code">Send verification code</string>
    <string name="s_forget_passwd">Forgot Password</string>
    <string name="s_change_password">Change Password</string>
    <string name="s_enter_old_password">Input old password</string>
    <string name="s_enter_new_password">Input new password</string>
    <string name="s_valid_emailaddress">Please enter the correct email address</string>
    <string name="s_verify_code_error">Verification code error</string>
    <string name="s_valid_password">Incorrect password format</string>
    <string name="s_account">User</string>
    <string name="s_exit_login">Logout</string>
    <string name="s_disclaimer">Disclaimer</string>
    <string name="s_favorite">Favorites</string>
    <string name="s_liquidation_data">Liquidation Data</string>
    <string name="s_btc_oi">BTC Open Interest</string>
    <string name="s_open_interest">Open Interest</string>
    <string name="s_greed_index">Fear and Greed</string>
    <string name="s_longshort_ratio">Longs VS Shorts</string>
    <string name="s_funding_rate">Funding Rate</string>
    <string name="s_exchange_name">Exchange</string>
    <string name="s_rate">Rate</string>
    <string name="s_longs">Longs</string>
    <string name="s_shorts">Shorts</string>
    <string name="s_usdt_funding">USDT or USD</string>
    <string name="s_coin_funding">Coin</string>
    <string name="s_rekt">Rekt</string>
    <string name="s_1hrekt">1h Rekt</string>
    <string name="s_4hrekt">4h Rekt</string>
    <string name="s_24hrekt">24h Rekt</string>
    <string name="s_4h_chg">4h Chg</string>
    <string name="s_fear">Fear</string>
    <string name="s_greed">Greed</string>
    <string name="s_extreme_fear">Extreme Fear</string>
    <string name="s_extreme_greed">Extreme Greed</string>
    <string name="s_oi_vol">OI</string>
    <string name="s_24h_turnover">24h Vol</string>
    <string name="has_no_data">nothing, Please refresh~</string>
    <string name="pull_to_refresh">Pull To Refresh</string>
    <string name="release_to_refresh">Release To Refresh</string>
    <string name="refreshing">Refreshing</string>
    <string name="refresh_succeeded">Refresh Succeeded</string>
    <string name="refresh_failed">Refresh Failed</string>
    <string name="pull_up_to_load">Pull Up To Load</string>
    <string name="release_to_load">Release To Load</string>
    <string name="loading">Loading</string>
    <string name="load_succeeded">Load Succeeded</string>
    <string name="load_failed">Load Failed</string>
    <string name="customize_resources">cus resources</string>
    <string name="s_tickers">Markets</string>
    <string name="s_price">Price</string>
    <string name="s_price_chg">Price Change</string>
    <string name="s_oi_chg">OI Change</string>
    <string name="s_exchange_longshort_ratio">Exchange Longs/Shorts</string>
    <string name="s_sortby">Sort by</string>
    <string name="s_crypto_coin">Markets</string>
    <string name="s_add_alert">Create Alert</string>
    <string name="s_futures_market">Futures</string>
    <string name="s_header_oi">Open Interest</string>
    <string name="s_cancel">Cancel</string>
    <string name="s_ok">OK</string>
    <string name="s_is_upgrade">New version update</string>
    <string name="s_last_version">Current is up to date</string>
    <string name="s_text_size">Text Size</string>
    <string name="s_font_small">Small</string>
    <string name="s_font_middle">Middle</string>
    <string name="s_font_large">Large</string>
    <string name="s_bg_alpha">Background Alpha</string>
    <string name="s_portfolio">Portfolio</string>
    <string name="s_other_setting">Other Setting</string>
    <string name="s_adjust_kchart_height">Change main chart height</string>
    <string name="s_up_candle">Up Candle</string>
    <string name="s_solid">Solid</string>
    <string name="s_hollow">Hollow</string>
    <string name="s_agreeto">I agree to</string>
    <string name="s_and">and</string>
    <string name="s_symbol_liq">Symbol Liquidations</string>
    <string name="s_coin_liquidation">Coin Liquidations</string>
    <string name="s_fr_kline">Funding Rate K</string>
    <string name="s_oi_kline">Open Interest K</string>
    <string name="s_longshort_person">Longs Shorts Person Ratio</string>
    <string name="s_top_trader_accounts_ratio">Top Trader Long/Short Ratio (Accounts)</string>
    <string name="s_top_trader_position_ratio">Top Trader Long/Short Ratio (Positions)</string>
    <string name="s_none_data">Loading...</string>
    <string name="s_notification_setting">Please Open System Notification</string>
    <string name="s_ma_line_width">Ma Line Width</string>
    <string name="s_multiple_charts">Multiple Charts</string>
    <string name="s_change_theme">Change Theme</string>
    <string name="s_del_userdata">Remove User Data</string>
    <string name="common_permission_hint">Authorization hint</string>
    <string name="common_permission_message">You need to grant %s before using this function</string>
    <string name="common_permission_granted">granted</string>
    <string name="common_permission_denied">Cancel</string>
    <string name="common_permission_alert">Authorization reminder</string>
    <string name="common_permission_fail_hint">Authorization failed, please grant permission correctly</string>
    <string name="common_permission_fail_assign_hint">Authorization failed, please grant %s correctly</string>
    <string name="common_permission_manual_fail_hint">Failed to obtain permission, please grant permission manually</string>
    <string name="common_permission_manual_assign_fail_hint">Failed to obtain permission, please manually grant %s</string>
    <string name="common_permission_background_location_fail_hint">Failed to obtain background location permission,\nPlease select "Always Allow"</string>
    <string name="common_permission_background_sensors_fail_hint">Failed to obtain background sensor permissions,\nPlease choose "Always Allow"</string>
    <string name="common_permission_media_location_hint_fail">Failed to obtain media location permission\nPlease clear application data and try again</string>
    <string name="common_permission_goto_setting_page">Go to authorization</string>
    <string name="common_permission_calendar">calendar permissions</string>
    <string name="common_permission_camera">Camera permission</string>
    <string name="common_permission_contacts">Contacts permissions</string>
    <string name="common_permission_location">location permission</string>
    <string name="common_permission_location_background">Background location permission</string>
    <string name="common_permission_wireless_devices">nearby device permissions</string>
    <string name="common_permission_microphone">microphone permission</string>
    <string name="common_permission_phone">Phone permission</string>
    <string name="common_permission_call_log">Call log permission</string>
    <string name="common_permission_sensors">body sensor permissions</string>
    <string name="common_permission_sensors_background">background body sensor permissions</string>
    <string name="common_permission_activity_recognition_29">Fitness exercise permission</string>
    <string name="common_permission_activity_recognition_30">Physical Activity Permission</string>
    <string name="common_permission_media_location">Read media file location permission</string>
    <string name="common_permission_sms">SMS permission</string>
    <string name="common_permission_storage">storage permission</string>
    <string name="common_permission_post_notifications">Permission to send notifications</string>
    <string name="common_permission_image_and_video">photo and video permissions</string>
    <string name="s_coin_oi_kline">Aggregated OpenInterest</string>
    <string name="s_oi_delta">OpenInterest Delta</string>
    <string name="s_oi_fr">Funding Rates(OI Weighted)</string>
    <string name="s_vol_fr">Funding Rates(Volume Weighted)</string>
    <string name="s_ls_accounts_k">Longs Shorts Ratio(Accounts Candle)</string>
    <string name="s_ls_top_accounts_k">Top Trader Longs Shorts Ratio(Accounts Candle)</string>
    <string name="s_ls_top_positions_ratio_k">Top Trader Longs Shorts Ratio(Positions Candle)</string>
</resources>