<?xml version="1.0" encoding="utf-8"?>
<com.ruffian.library.widget.RLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:background_normal="@color/highlight_view_bg"
    app:shadow_color="@color/gray_dashline"
    app:shadow_radius="2dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/s_main_chart"
        android:textColor="@color/blackgray"
        android:textSize="16sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_ma"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="10dip"
            android:text="MA"
            
            android:textColor="@color/blackgray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_boll"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="10dip"
            android:text="BOLL"
            
            android:textColor="@color/blackgray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_ema"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="10dip"
            android:text="EMA"
            
            android:textColor="@color/blackgray"
            android:textSize="13sp" />




    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dip"
        android:textStyle="bold"
        android:text="@string/s_sub_chart"
        android:textColor="@color/blackgray"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_macd"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="MACD"
                android:textColor="@color/blackgray"
                android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_kdj"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="10dip"
            android:text="KDJ"
            android:textColor="@color/blackgray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_rsi"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="10dip"
            android:text="RSI"
            android:textColor="@color/blackgray"
            android:textSize="13sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">



            <TextView
                android:id="@+id/tv_funding"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/s_funding_rate"
                android:textColor="@color/blackgray"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_oi"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/s_open_interest"
                android:textColor="@color/blackgray"
                android:textSize="13sp" />
            <TextView
                android:id="@+id/tv_symbol_liq"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/s_symbol_liq"
                android:textColor="@color/blackgray"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_funding_kl"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/s_fr_kline"

                android:textColor="@color/blackgray"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_oi_kl"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/s_oi_kline"
                android:textColor="@color/blackgray"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_coin_liq"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/s_coin_liquidation"
                
                android:textColor="@color/blackgray"
                android:textSize="13sp" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_longshort_people"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/s_longshort_person"
                
                android:textColor="@color/blackgray"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_top_position"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/s_top_trader_position_ratio"
                
                android:textColor="@color/blackgray"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_top_account"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/s_top_trader_accounts_ratio"
                
                android:textColor="@color/blackgray"
                android:textSize="13sp" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_coin_oi_kline"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/s_coin_oi_kline"
                android:textColor="@color/blackgray"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_oi_delta"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/s_oi_delta"
                android:textColor="@color/blackgray"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_oi_fr"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/s_oi_fr"
                android:textColor="@color/blackgray"
                android:textSize="13sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_vol_fr"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/s_vol_fr"
                android:textColor="@color/blackgray"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_ls_accounts_k"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/s_ls_accounts_k"
                android:textColor="@color/blackgray"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_top_accounts_k"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/s_ls_top_accounts_k"
                android:textColor="@color/blackgray"
                android:textSize="13sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_top_positions_K"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/s_ls_top_positions_ratio_k"
                android:textColor="@color/blackgray"
                android:textSize="13sp" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dip"
                android:textColor="@color/blackgray"
                android:textSize="13sp" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dip"
                android:textColor="@color/blackgray"
                android:textSize="13sp" />
        </LinearLayout>

    </LinearLayout>
</com.ruffian.library.widget.RLinearLayout>